[project]
name = "boilerplate-demographic-data-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "Marco Insabato",email = "marco.insabato@agilelab.it"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (==1.5.3)",
    "numpy (==1.23.5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
